# rtsv0

./: pyproject.toml
tselect.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tselect/adapters/: baseline_detector.py  baseline_runner.py  pytest_adapter.py
tselect/cli/: main.py
tselect/core/: selector.py
tselect/reporting/: cache.py  summary.py
tselect/utils/: config_loader.py  loader.py  logger.py
